# alleycat

./: .gitignore  AUTHORS  CMakeLists.txt  alleycat.c  build-clean.sh  build.sh  cat.c  cat.h  configure.ac  mt19937.c  mt19937.h  pcsound.c  rand.c  rand.h  sound.c  sound.h  speaker.c  sprites.c  sprites.h  test.c  wrapper_sdl.c  wrapper_sdl.h
src/: CMakeLists.txt  Makefile.am  alleycat.c  cat.c  cat.h  pcsound.h  sound.c  sound.h  speaker.h  sprites.c  sprites.h  systemtime.c  systemtime.h  wrapper_sdl.c  wrapper_sdl.h
